tests/broken/missing-if-expression.stderr
error: Expected one of: block, endblock, if, elseif, else, endif, for, endfor
 --> tests/broken/missing-if-expression.rs:4:25
  |
4 | #[oxiplate_inline = "{% if %}"]
  |                         ^
